fix flex wrapping on smaller devices

--- a/src/css/components/button_area.component.pcss
+++ b/src/css/components/button_area.component.pcss
@@ -1,6 +1,10 @@
 #accessabar .ab-button-area {
     justify-content: space-between;
-    
+    flex-wrap: wrap;
+
+    @media (--for-tablet-portrait-up) {
+        flex-wrap: nowrap;
+    }
 
     .ab-group {
         margin-right: 0.5em;
